--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
   web:
     container_name: project_service 
     build: .
+    labels:
+      team: tech
+      version: 1.0.0
+      environment: production
     depends_on:
       - db
     ports:
